libs/preprocessor/tests/errors/pe24_parsing_failed/stderr.ansi
[0m[1m[38;5;9merror[PE24][0m[1m: failed to parse[0m
  [0m[36m┌─[0m source.hpp:1:6
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m class[0m[31m [0mtest {};
  [0m[36m│[0m      [0m[31m^[0m [0m[31mfailed to parse[0m

